categories section added

--- a/index.html
+++ b/index.html
@@ -87,6 +87,60 @@
     </header>
     <!-- header end -->
 
+    <main class="my-5">
+        <!-- category start -->
+        <section style="margin-top: 50px; margin-bottom: 50px;" class="container">
+            <div class="category-heading text-center">
+                <h5 class="text-danger">Category</h5>
+                <h2>We Offer Best Services</h2>
+            </div>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 mt-5 g-4">
+                <div class="col ">
+                  <div class="card travel-category-card border-0 h-100 d-flex flex-column align-items-center p-3">
+                    <img class="img-fluid category-img" src="images/categories/category-1.png" class="card-img-top" alt="...">
+                    <div class="card-body text-center mt-3">
+                      <h5 class="card-title">Calculate Weather</h5>
+                      <p class="card-text">Built Wicket longer admire do barton vanity itself do in it.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col ">
+                    <div class="card travel-category-card border-0 h-100 d-flex flex-column align-items-center p-3">
+                      <img class="img-fluid category-img" src="images/categories/category-2.png" class="card-img-top" alt="...">
+                      <div class="card-body text-center mt-3">
+                        <h5 class="card-title">Best Flights</h5>
+                        <p class="card-text">Engrossed listening. Park gate sell they west hard for the.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col ">
+                    <div class="card travel-category-card border-0 h-100 d-flex flex-column align-items-center p-3">
+                      <img class="img-fluid category-img" src="images/categories/category-3.png" class="card-img-top" alt="...">
+                      <div class="card-body text-center mt-3">
+                        <h5 class="card-title">Local Events</h5>
+                        <p class="card-text">Barton vanity itself do in it. Preferd to men it engrossed listening. </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col ">
+                    <div class="card travel-category-card border-0 h-100 d-flex flex-column align-items-center p-3">
+                      <img class="img-fluid category-img" src="images/categories/category-4.png" class="card-img-top" alt="...">
+                      <div class="card-body text-center mt-3">
+                        <h5 class="card-title">Customization</h5>
+                        <p class="card-text">We deliver outsourced aviation services for military customers</p>
+                      </div>
+                    </div>
+                  </div>
+
+
+              </div>
+        </section>
+        <!-- category end -->
+    </main>
+    <footer style="height: 2000px;">
+
+    </footer>
+
     <!-- Bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
